infrastructure/terraform/32ecs_security_group.tf
resource "aws_security_group" "nginx_sg" {
  vpc_id = data.aws_vpc.pond_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
